--- a/src/Job-Portal/NaveBar/nav.module.css
+++ b/src/Job-Portal/NaveBar/nav.module.css
@@ -196,7 +196,7 @@ font-weight: 400;
 
 .fullnavewrapper {
     display: flex;
-    background-color: rgb(40, 4, 99);
+    background-color:#408d97;
     width: 100%;
     height: 60px;
     align-items: center;
