--- a/src/Job-Portal/Footer/footer.module.css
+++ b/src/Job-Portal/Footer/footer.module.css
@@ -14,7 +14,7 @@
 }
 
 .footerWraper{
-    background-color:rgb(39,4,98);
+    background-color:#5fadb7;
     /* background-color: rgb(29, 1, 75); */
     width: 100%;
 
